==> piconomix/px-fwlib/arch/avr/px_uart.c <==
#include <avr/interrupt.h>
#include <stdlib.h>
#include "px_uart.h"
#include "px_uart_defs.h"
#include "px_ring_buf_macros.h"
#include "px_board.h"
#include "px_dbg.h"
#define PX_UART_CALC_UBRR(baud) \
    (PX_UDIV_ROUND(F_CPU, baud * (((PX_UART_CFG_USE_2X_BAUD_RATE == 0)? 16ul : 8ul))) - 1)

static void px_uart_start_tx(px_uart_per_t peripheral)
{
    switch(peripheral)
    {
#if PX_UART_CFG_UART0_EN
    case PX_UART_PER_0: 
        PX_BIT_SET_HI(UCSR0B, UDRIE0); 
        break;
#endif
#if PX_UART_CFG_UART1_EN
    case PX_UART_PER_1:
        PX_BIT_SET_HI(UCSR1B, UDRIE1);
        break;
#endif
    default:
        break;
    }
}

static bool px_uart_init_peripheral(px_uart_per_t peripheral,
                                    uint16_t      ubrr,
                                    uint8_t       ucsrc)
{
    switch(peripheral)
    {
#if PX_UART_CFG_UART0_EN
    case 0:
        // Disable UART
        UCSR0B = 0;
#if (PX_UART_CFG_USE_2X_BAUD_RATE == 1)
        // Double the USART transmission speed
        UCSR0A = (1<<U2X0);
#else
        UCSR0A = 0;
#endif
        // Set BAUD rate
        UBRR0H = PX_U16_HI8(ubrr);
        UBRR0L = PX_U16_LO8(ubrr);
        // Configure data bits, parity and stop bits
        UCSR0C = ucsrc;
        // Enable RxD/TxD and receive interupt
        UCSR0B = (1<<RXCIE0) | (1<<RXEN0) | (1<<TXEN0);
        break;
#endif

#if PX_UART_CFG_UART1_EN
    case 1:
        // Disable UART
        UCSR1B = 0;
#if (PX_UART_CFG_USE_2X_BAUD_RATE == 1)
        // Double the USART transmission speed
        UCSR1A = (1<<U2X1);
#else
        UCSR1A = 0;
#endif
        // Set BAUD rate
        UBRR1H = PX_U16_HI8(ubrr);
        UBRR1L = PX_U16_LO8(ubrr);
        // Configure data bits, parity and stop bits
        UCSR1C = ucsrc;
        // Enable RxD/TxD and receive interupt
        UCSR1B = (1<<RXCIE1) | (1<<RXEN1) | (1<<TXEN1);
        break;
#endif

    default:
        // Invalid peripheral
        PX_DBG_ERR("Invalid peripheral");
        return false;
    }

    // Success
    return true;
}

void px_uart_init(void)
{
    // Initialize peripheral data for each enabled peripheral
#if PX_UART_CFG_UART0_EN
    px_uart_init_peripheral_data(PX_UART_PER_0, &px_uart0_data);
#endif
#if PX_UART_CFG_UART1_EN
    px_uart_init_peripheral_data(PX_UART_PER_1, &px_uart1_data);
#endif
}

bool px_uart_open2(px_uart_handle_t *  handle, 
                   px_uart_per_t       peripheral,
                   uint32_t            baud, 
                   px_uart_data_bits_t data_bits, 
                   px_uart_parity_t    parity, 
                   px_uart_stop_bits_t stop_bits)
{
    px_uart_data_t * uart_data;
    uint16_t         ubrr;
    uint8_t          ucsrc = 0x00;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);

    // Handle not initialised
    handle->uart_data = NULL;

    // Set pointer to peripheral data
    switch(peripheral)
    {
#if PX_UART_CFG_UART0_EN
    case PX_UART_PER_0:
        uart_data = &px_uart0_data;
        break;
#endif
#if PX_UART_CFG_UART1_EN
    case PX_UART_PER_1:
        uart_data = &px_uart1_data;
        break;
#endif
    default:
        PX_DBG_ERR("Invalid peripheral specified");
        return false;
    }

    // Already open?
    if(uart_data->open_counter != 0)
    {
        PX_DBG_ERR("Only one handle per UART peripheral can be opened");
        return false;
    }

    // Calculate new 16-bit UBRR register value
    ubrr = px_uart_calc_ubrr(baud);

    // Set parity
    switch(parity)
    {
    case PX_UART_PARITY_ODD :
        ucsrc |= (1<<UPM01) | (1<<UPM00);
        break;
    case PX_UART_PARITY_EVEN :
        ucsrc |= (1<<UPM01) | (0<<UPM00);
        break;
    case PX_UART_PARITY_NONE :
        ucsrc |= (0<<UPM01) | (0<<UPM00);
        break;
    default:
        PX_DBG_ERR("Invalid parity specified");
        handle->uart_data = NULL;
        return false;
    }

    // Set data bits
    switch(data_bits)
    {
    case PX_UART_DATA_BITS_5:
        ucsrc |= (0<<UCSZ01) | (0<<UCSZ00);
        break;
    case PX_UART_DATA_BITS_6:
        ucsrc |= (0<<UCSZ01) | (1<<UCSZ00);
        break;
    case PX_UART_DATA_BITS_7:
        ucsrc |= (1<<UCSZ01) | (0<<UCSZ00);
        break;
    case PX_UART_DATA_BITS_8:
        ucsrc |= (1<<UCSZ01) | (1<<UCSZ00);
        break;
    default:
        PX_DBG_ERR("Invalid number of data bits");
        handle->uart_data = NULL;
        return false;
    }

    // Set stop bits
    switch(stop_bits)
    {
    case PX_UART_STOP_BITS_1:
        ucsrc |= (0<<USBS0);
        break;
    case PX_UART_STOP_BITS_2:
        ucsrc |= (1<<USBS0);
        break;
    default:
        PX_DBG_ERR("Invalid number of stop bits specified");
        handle->uart_data = NULL;
        return false;
    }

    // Initialise peripheral
    if(!px_uart_init_peripheral(peripheral,
                                ubrr, 
                                ucsrc))
    {
        // Invalid parameter specified
        return false;
    }

    // Point handle to peripheral
    handle->uart_data = uart_data;

    // Success
    uart_data->open_counter = 1;
    return true;
}

bool px_uart_close(px_uart_handle_t * handle)
{
    px_uart_data_t * uart_data;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);

    // Already closed?
    if(uart_data->open_counter == 0)
    {
        PX_DBG_ERR("Peripheral already closed");
        return false;
    }

    switch(uart_data->peripheral)
    {
#if PX_UART_CFG_UART0_EN
    case 0:
        // Disable UART
        UCSR0B = 0;
        break;
#endif
#if PX_UART_CFG_UART1_EN
    case 1:
        // Disable UART
        UCSR1B = 0;
        break;
#endif
    default:
        PX_DBG_ERR("Invalid peripheral");
        return false;
    }

    // Close handle
    handle->uart_data = NULL;

    // Success
    uart_data->open_counter = 0;
    return true;
}

void px_uart_put_char(px_uart_handle_t * handle, char data)
{
    px_uart_data_t * uart_data;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);
    PX_DBG_ASSERT(uart_data->open_counter != 0);

    // Wait until transmit buffer has space for one byte
    while(PX_RING_BUF_FULL(uart_data->tx_circ_buf))
    {
        ;
    }

    // Buffer the byte to be transmitted
    PX_RING_BUF_WRITE(uart_data->tx_circ_buf, (uint8_t)data);

    // Make sure transmit process is started by enabling interrupt
    px_uart_start_tx(uart_data->peripheral);
}

bool px_uart_wr_u8(px_uart_handle_t * handle, uint8_t data)
{
    px_uart_data_t * uart_data;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);
    PX_DBG_ASSERT(uart_data->open_counter != 0);

    if(PX_RING_BUF_FULL(uart_data->tx_circ_buf))
    {
        return false;
    }
    PX_RING_BUF_WRITE(uart_data->tx_circ_buf, data);

    // Make sure transmit process is started by enabling interrupt
    px_uart_start_tx(uart_data->peripheral);

    return true;
}

size_t px_uart_wr(px_uart_handle_t * handle, const void* data, size_t nr_of_bytes)
{
    px_uart_data_t * uart_data;
    uint8_t *        data_u8 = (uint8_t *)data;
    size_t           bytes_buffered = 0;    

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);
    PX_DBG_ASSERT(uart_data->open_counter != 0);

    while(nr_of_bytes)
    {
        // Make sure there is space available in buffer
        if(PX_RING_BUF_FULL(uart_data->tx_circ_buf))
        {
            break;
        }

        // Insert data into buffer
        PX_RING_BUF_WRITE(uart_data->tx_circ_buf, *data_u8++);

        // Next byte
        bytes_buffered++;
        nr_of_bytes--;
    }

    // Make sure transmit process is started by enabling interrupt
    px_uart_start_tx(uart_data->peripheral);

    return bytes_buffered;
}

char px_uart_get_char(px_uart_handle_t * handle)
{
    px_uart_data_t * uart_data;
    uint8_t          data;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);
    PX_DBG_ASSERT(uart_data->open_counter != 0);

    // Wait until at least one byte has been received
    while(PX_RING_BUF_EMPTY(uart_data->rx_circ_buf))
    {
        ;
    }

    // Fetch received byte
    PX_RING_BUF_READ(uart_data->rx_circ_buf, data);

    return (char)data;
}

bool px_uart_rd_u8(px_uart_handle_t * handle, uint8_t* data)
{
    px_uart_data_t * uart_data;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);
    PX_DBG_ASSERT(uart_data->open_counter != 0);

    if(PX_RING_BUF_EMPTY(uart_data->rx_circ_buf))
    {
        return false;
    }
    else
    {
        PX_RING_BUF_READ(uart_data->rx_circ_buf, *data);
        return true;
    }
}

size_t px_uart_rd(px_uart_handle_t * handle, void* buffer, size_t nr_of_bytes)
{
    px_uart_data_t * uart_data;
    uint8_t  *       buffer_u8 = (uint8_t *)buffer;
    size_t           data_received = 0;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);
    PX_DBG_ASSERT(uart_data->open_counter != 0);

    while(nr_of_bytes)
    {
        // See if there is data in the buffer
        if(PX_RING_BUF_EMPTY(uart_data->rx_circ_buf))
        {
            break;
        }
        // Fetch byte
        PX_RING_BUF_READ(uart_data->rx_circ_buf, *buffer_u8++);

        // Next byte
        data_received++;
        nr_of_bytes--;
    }

    return data_received;
}

void px_uart_ioctl_change_baud(px_uart_handle_t * handle, uint32_t baud)
{
    px_uart_data_t * uart_data;
    uint16_t         ubrr;
    uint8_t          ucsrc;

    // Verify that pointer to handle is not NULL
    PX_DBG_ASSERT(handle != NULL);
    // Set pointer to peripheral
    uart_data = handle->uart_data;
    // Check that handle is open
    PX_DBG_ASSERT(uart_data != NULL);
    PX_DBG_ASSERT(uart_data->open_counter != 0);

    // Calculate new 16-bit UBRR register value
    ubrr = px_uart_calc_ubrr(baud);

    // Get current UCSRxC register value (data bits, parity & stop bits)
    switch(uart_data->peripheral)
    {
#if PX_UART_CFG_UART0_EN
    case 0:
        ucsrc = UCSR0C;
        break;
#endif
#if PX_UART_CFG_UART1_EN
    case 1:
        ucsrc = UCSR1C;
        break;
#endif
    default:
        PX_DBG_ERR("Invalid peripheral");
        return;
    }

    // Initialise peripheral with new BAUD rate
    px_uart_init_peripheral(uart_data->peripheral, ubrr, ucsrc);
}
